# dream

./: README.md
.github/workflows/: cicd.yaml  pr-flow.yaml
bank/: Dockerfile  pyproject.toml  run_local
bank/src/bank/: bank.py
bank/tests/: test_bank.py
kubernetes/apps/: kustomization.yaml  store.yaml
kubernetes/apps/bank/: deployment.yaml  hpa.yaml  kustomization.yaml  sa.yaml
kubernetes/apps/store/: application.yaml  deployment.yaml  hpa.yaml  kustomization.yaml
kubernetes/clusters/kind/: applications.yaml  dream-registry.yaml  infrastructure.yaml
kubernetes/clusters/kind/flux-system/: gotk-sync.yaml
kubernetes/infrastructure/configs/clustersecret/: kustomization.yaml  mongodb-cluster-banker-credentials.yaml
kubernetes/infrastructure/configs/mongodb-cluster/: kustomization.yaml  mongodb-cluster.yaml  rbac.yaml
kubernetes/infrastructure/configs/rabbitmq-cluster/: kustomization.yaml  rabbitmq-cluster.yaml
kubernetes/infrastructure/configs/weave-policies/: kustomization.yaml
kubernetes/infrastructure/controllers/bitnami/: kustomization.yaml  namespace.yaml  postgres-release.yaml  rabbitmq-release.yaml  release.yaml  repository.yaml
kubernetes/infrastructure/controllers/clustersecret/: release.yaml  (+1 more)
modules/messaging/: pyproject.toml
modules/messaging/src/messaging/: rabbitmq.py
modules/persistance/: README.md  pyproject.toml
modules/persistance/src/persistance/: mongo.py
provided_components/: schema.sql
store/: Dockerfile  k8s.yaml  pyproject.toml  run_local
store/src/store/: store.py
store/tests/: test_store.py
terraform/: .gitignore  .terraform.lock.hcl  argo.tf  cluster.tf  flux.tf  nginx.tf  variables.tf  versions.tf
(+5 files in other folders)
